public/css/notes.css
/* ... */
#add-done-container {
    display: flex;
    justify-content: center;
}

#create-label-cancel, #create-label-done {
    cursor: pointer;
}

.tag-divider {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: myFont3;
    font-size: 20px;
    color: white;
}

#tag-selection-divider {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: myFont3;
    font-size: 20px;
    color: white;
    padding: 0px 10px;
    margin: 0;
    white-space: nowrap;
}

.unselectable {
    user-select: none;
    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
}

@keyframes blink {
    0%, 100% { opacity: 0.7; }
    50% { opacity: 0 }
}

.blink {
    animation: blink 2s infinite;
}

#aboutIconNotes {
    display: block;
    position: absolute;
    right: 20px;
    bottom: 15px;
}

#aboutIconNotes:hover {
    cursor: pointer;
}

#list-heading-container {
    display: flex;
    margin-top: 5px;
    margin-bottom: 10px;

    /* border: 2px solid cyan; */
    justify-content: center;

}

#list-title-container {
    display: flex;
    height: 40px;
    /* width: 80%; */
    width: 90%;
    /* background-color:rgb(255, 255, 255, 0.5); */
    border: 2px solid white;
    border-radius: 15px;
    align-items: center;
    justify-content: left;
}

#list-date-title {
    color: white;
    font-family: settingsHeaderFont;
    font-size: 20px; 
}

#white-circle {
    margin-right: 10px;
    margin-left: 10px;
}

#add-note-task-svg {
    margin-left: 8px;
    margin-right: 8px;
}

.plus-svg-path {
    stroke: rgba(255, 255, 255, 0.5);
}

#list-options-container {
    display: flex;
    margin-left: 10px;
    width: 20%;

    align-items: center;
    /* border: 1px solid cyan; */
    justify-content: center;
}

#list-options-btn {
    /* border: 2px solid white; */
    height: 100%;
    width: 50px;

    display: flex;
    align-items: center;
    justify-content: center;

    border-radius: 15px;

    transition: background-color 0.15s ease-in-out;
}

#list-options-btn:hover {
    background-color:rgba(255, 255, 255, 0.2);
    cursor: pointer;
}

#list-notes-container {
    width: 98%;
    display: flex;
    flex-direction: column;
}

#add-note-task-container {
    border: 2px dashed rgba(255, 255, 255, 0.50);
    color: rgba(255, 255, 255, 0.50);
    border-radius: 15px;
    height: 40px;

    display: flex;
    align-items: center;

    margin-bottom: 10px;
    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
}

#add-note-task-container:hover {
    background-color:rgba(255, 255, 255, 0.2);
    border-color: white;
    cursor: pointer;
}

#add-note-task {
    font-family: settingsHeaderFont;
}

#note-task-input-container {
    margin-bottom: 10px;
    border-radius: 15px;
    height: 100%;
    
    display: none;
    /* display: flex; */

    align-items: center;

    flex-direction: column;

    background-color: rgba(255, 255, 255, 0.2);
}

/* NOTES */

#upper-half-note-task-input {
    /* border: 3px solid white; */
    width: 100%;
}

#lower-half-note-task-input {
    /* border: 3px solid red; */
    width: 100%;
    height: 50px;
}

#note-task-input-text {
    width: calc(100% - 20px);
    height: 24px;
    min-height: 24px;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 10px;
    background-color: rgba(255, 255, 255, 0);
    border: none;
    outline: none;
    font-family: settingsHeaderFont;
    font-size: 16px;
    color: white;
    overflow: hidden;
    resize: none;
    white-space: pre-wrap;
    word-wrap: break-word;
    box-sizing: border-box;
}

#note-task-input-text::placeholder {
    color: rgba(255, 255, 255, 0.5);
}

#save-cancel-container {
    display: flex;
    height: 100%;
    align-items: center;
    font-family: settingsHeaderFont;
}

.save-cancel-task-container {
    margin-left: 10px;
}

#note-input-save-btn {
    border: 3px solid white;
    padding: 5px;
    border-radius: 25px;
    transition: background-color 0.15s ease-in-out;
}

#note-input-save-btn:hover {
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.2);
}

#note-input-cancel-btn {
    /* border: 3px solid white; */
    padding: 5px;
    border-radius: 25px;
    transition: background-color 0.15s ease-in-out;
}

#note-input-cancel-btn:hover {
    background-color: rgba(255, 255, 255, 0.2);
    cursor: pointer;
}

.noteTask {
    border: 2px solid white;
    border-radius: 15px;
    height: 40px;

    font-family: settingsHeaderFont;
    font-size: 16px;

    display: flex;
    align-items: center;

    margin-bottom: 10px;
    padding-left: 10px;
}

.taskCircularCheck {
    display: flex;
    margin-right: 10px;
    border: 2px solid white;
    border-radius: 25px;
    height: 20px;
    width: 20px;

    align-items: center;
    justify-content: center;
    transition: background-color 0.15s ease-in-out;

}

.circularCheck {
    /* display: none; */
    display: flex;
    opacity: 0;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    transition: opacity 0.15s ease-in-out;
}

.taskCircularCheck:hover .circularCheck{
    cursor: pointer;
    display: flex;
    opacity: 1;
}

/*
    When taskCircularCheck is clicked on
    turn background-color to #3ba43e
    make check stroke-width = 3
*/

.completed-task {
    text-decoration: line-through;
}




/* 
    ALL MEDIA STYLES
*/



@media (max-width: 500px) {
    #list-notes-container {
        width: 97%;
    }
}

@media (max-width: 467px) {
    #list-notes-container {
        width: 96%;
    }
}

@media (max-width: 433px) {
    #list-notes-container {
        width: 95%;
    }
}

@media (max-width: 400px) {
    #list-notes-container {
        width: 94%; /* Perfect for mobile! */
    }
}
/* ... */

